add is_elective flag for subject classification and flyway migration